--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(StepGraph)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(StepGraph main.cpp)
+add_executable(StepGraph main.cpp GraphNode.h GraphNode.cpp)
